--- a/app/src/main/res/layout/administrar_nube.xml
+++ b/app/src/main/res/layout/administrar_nube.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:id="@+id/layout" />
+            android:id="@+id/layoutLista" />
     </ScrollView>
 
     <LinearLayout
