--- a/app/src/main/res/layout/administrar_nube.xml
+++ b/app/src/main/res/layout/administrar_nube.xml
@@ -5,7 +5,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="424dp"
         >
 
         <LinearLayout
@@ -32,12 +32,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/borrar" />
 
-        <Button
-            android:text="bajar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bajar" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -46,16 +40,11 @@
         android:layout_height="match_parent">
 
         <Button
-            android:text="seleccionar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/seleccionar" />
-
-        <Button
             android:text="subir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/subir" />
+            android:id="@+id/upload" />
+
     </LinearLayout>
 
 </LinearLayout>
