--- a/app/src/main/res/layout/snipplet_container.xml
+++ b/app/src/main/res/layout/snipplet_container.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     >
 
+    <Button
+        android:text="+"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/add" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
