funciona eliminar snipplet local

--- a/app/src/main/res/layout/snipplet_container.xml
+++ b/app/src/main/res/layout/snipplet_container.xml
@@ -10,6 +10,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/add" />
 
+    <Button
+        android:text="-"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/deleteCategory" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
