Correccion de errores, borrar categoria devuelve a mainactivity

--- a/app/src/main/res/layout/edit_snipplet.xml
+++ b/app/src/main/res/layout/edit_snipplet.xml
@@ -39,4 +39,10 @@
 
     </ScrollView>
 
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button" />
+
 </LinearLayout>
